# napari-vidcrop

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
napari_vidcrop/: __init__.py  core.py  napari.yaml
tests/: test_napari_vidcrop.py
