[tool.poetry]
name = "napari-vidcrop"
version = "0.1.0"
description = "Video cropping"
authors = ["Kushaan Gupta <gkushaan@rediffmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
napari = "^0.4.14"
napari_video = "^0.2.8"
scikit-image = "^0.19.2"
magicgui = "^0.3.7"
magic-class = "^0.5.21"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
